--- a/package.json
+++ b/package.json
@@ -12,8 +12,16 @@
   "dependencies": {
     "@aws-amplify/ui-react": "^6.5.5",
     "aws-amplify": "^6.6.6",
+    "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.8",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-bootstrap": "^2.10.9",
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "^18.2.0",
+    "react-grid-layout": "^1.5.1",
+    "react-resizable": "^3.0.5",
+    "react-router-dom": "^7.4.0",
+    "recharts": "^2.15.1"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.5.0",
